--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,9 +3,18 @@ spring:
     generate-ddl: true
     hibernate:
       ddl-auto: create
+    properties:
+      hibernate:
+        show-sql: true
+        format_sql: true
+        highlight_sql: true
 
   datasource:
     url: jdbc:mysql://localhost:3306/community?allowPublicKeyRetrieval=true&useSSL=false&serverTimezone=UTC&characterEncoding=UTF-8
     username: root
     password: secret
     driver-class-name: com.mysql.cj.jdbc.Driver
+
+logging:
+  level:
+    org.hibernate.SQL: debug
