--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -21,3 +21,7 @@ logging:
     org.hibernate.orm.jdbc.bind: trace
     org.hibernate.orm.jdbc.extract: trace
     org.springframework.security: TRACE
+
+jwt:
+  secret: ${JWT_SECRET}
+  token-validity-in-seconds: ${JWT_TOKEN_VALIDITY_IN_SECONDS}
