--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -25,3 +25,6 @@ logging:
 jwt:
   secret: ${JWT_SECRET}
   token-validity-in-seconds: ${JWT_TOKEN_VALIDITY_IN_SECONDS}
+
+file:
+  upload-dir: /tmp/upload/
