feat: 스웨거 추가

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -28,3 +28,9 @@ jwt:
 
 file:
   upload-dir: /tmp/upload/
+
+springdoc:
+  swagger-ui:
+    tags-sorter: alpha
+    operationsSorter: alpha
+  default-consumes-media-type: application/json
